; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pia.c_PIA_Initialise.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pia.c_PIA_Initialise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PIA_PACTL = common dso_local global i32 0, align 4
@PIA_PBCTL = common dso_local global i32 0, align 4
@PIA_PORTA = common dso_local global i32 0, align 4
@PIA_PORTB = common dso_local global i32 0, align 4
@PIA_PORTA_mask = common dso_local global i32 0, align 4
@PIA_PORTB_mask = common dso_local global i32 0, align 4
@PIA_PORT_input = common dso_local global i32* null, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PIA_Initialise(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  store i32* %0, i32** %3, align 8
  store i8** %1, i8*** %4, align 8
  store i32 63, i32* @PIA_PACTL, align 4
  store i32 63, i32* @PIA_PBCTL, align 4
  store i32 255, i32* @PIA_PORTA, align 4
  store i32 255, i32* @PIA_PORTB, align 4
  store i32 255, i32* @PIA_PORTA_mask, align 4
  store i32 255, i32* @PIA_PORTB_mask, align 4
  %5 = load i32*, i32** @PIA_PORT_input, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  store i32 255, i32* %6, align 4
  %7 = load i32*, i32** @PIA_PORT_input, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  store i32 255, i32* %8, align 4
  %9 = load i32, i32* @TRUE, align 4
  ret i32 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
